# url-shortener

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  TUTORIAL.md  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: urls.py
app/core/: cache.py  config.py  metrics.py
app/db/: session.py
app/models/: click.py  url.py
app/schemas/: url.py
app/services/: url_service.py
docker/: entrypoint.sh
docker/grafana/dashboards/: url_shortener.json
docker/prometheus/: prometheus.yml
migrations/: env.py
migrations/versions/: 20260504_create_urls_and_clicks_tables.py
scripts/: backup_db.sh  restore_db.sh
tests/: conftest.py  test_cache.py  test_metrics.py  test_urls.py
